--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Robot"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid x:Name="mainGrid">
-
-    </Grid>
+    <DockPanel x:Name="mainGrid">
+        <Button Content="Mou" DockPanel.Dock="Top" Click="Button_Click"/>
+    </DockPanel>
 </Window>
